--- a/dart_folder/pubspec.yaml
+++ b/dart_folder/pubspec.yaml
@@ -45,9 +45,12 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/data1.txt
+    - assets/data2.txt
+    - assets/data3.txt
+    - assets/data4.txt
+    - assets/data5.txt
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
