--- a/dart_folder/pubspec.yaml
+++ b/dart_folder/pubspec.yaml
@@ -46,11 +46,11 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/data1.txt
-    - assets/data2.txt
-    - assets/data3.txt
-    - assets/data4.txt
-    - assets/data5.txt
+    - assets/data1.json
+    - assets/data2.json
+    - assets/data3.json
+    - assets/data4.json
+    - assets/data5.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
