--- a/dart_folder/pubspec.yaml
+++ b/dart_folder/pubspec.yaml
@@ -46,11 +46,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/data1.json
-    - assets/data2.json
-    - assets/data3.json
-    - assets/data4.json
-    - assets/data5.json
+    - assets/image1.png
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
