--- a/dart_folder/pubspec.yaml
+++ b/dart_folder/pubspec.yaml
@@ -46,6 +46,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/data.json
     - assets/image1.png
     - assets/image2.png
 
